--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             // console.log(data.articles)
             // data.articles.sort();
             function loadNewsData(text){
-                fetch(`https://newsapi.org/v2/everything?q=Tamil nadu Politics&from=${yr}-0${month}-${date}&sortBy=publishedAt&apiKey=${API_KEY}`).then((response)=> {return response.json()}).then((data)=>{
+                fetch(`https://newsapi.org/v2/everything?q=${text}&from=${yr}-0${month}-${date}&sortBy=publishedAt&apiKey=${API_KEY}`).then((response)=> {return response.json()}).then((data)=>{
             // console.log(data.articles)
             displayNewsData(data.articles);
          })
@@ -273,7 +273,7 @@
 
         const displayNewsData = articles => {
             const newsDiv = document.querySelector('.news');
-
+       console.log(articles)
             articles.forEach(article => {
                 const { author, description, publishedAt, title, url, urlToImage } = article;
 
