--- a/index.html
+++ b/index.html
@@ -321,10 +321,89 @@
 
 
     <script>
+    //     const API_KEY = `317a06010b8f49a4a08e3bb54667ec58`;
+
+    //     document.addEventListener('DOMContentLoaded', function () {
+    //         loadNewsData("Tamil nadu Politics");
+    //     });
+
+    //     let date = new Date().getDate();
+    //     let month = new Date().getMonth();
+    //     let yr = new Date().getFullYear();
+
+    //     const loadNewsData = async searchText => {
+    //         const url = `https://newsapi.org/v2/everything?q=${searchText}&from=${yr}-0${month}-${date}&sortBy=publishedAt&apiKey=${API_KEY}`;
+    //         try {
+    //             const res = await fetch(url);
+    //             const data = await res.json();
+    //             console.log(data.articles);
+    //             displayNewsData(data.articles);
+    //         } catch (error) {
+    //             console.error(error);
+    //             // Handle the error case
+    //         }
+    //     };
+
+    //     const displayNewsData = articles => {
+    //         const newsDiv = document.querySelector('.news');
+    //         newsDiv.innerHTML = '';
+
+    //         articles.forEach(article => {
+    //             const { author, description, publishedAt, title, url, urlToImage } = article;
+
+    //             const split = publishedAt.split('T');
+    //             const time = split[1];
+    //             const onlyTime = time.split('Z');
+
+    //             const div = document.createElement('div');
+    //             div.classList.add('h_100_1');
+    //             div.innerHTML = `
+    //   <img src="${urlToImage ? urlToImage : 'No image found'}" class="card-img-top" alt="">
+    //   <div class="card-body">
+    //     <span><p><b>Date: </b> ${split[0]} at ${onlyTime[0]}</p></span>
+    //     <h5 class="card-title">${title}</h5>
+    //     <p class="card-text">${description}</p>
+    //   </div>
+    // `;
+
+    //             newsDiv.appendChild(div);
+    //         });
+
+            // if (localStorage.getItem('language') === 'tamil') {
+            //     const targetLanguage = 'ta';
+            //     const walker = document.createTreeWalker(
+            //         newsDiv,
+            //         NodeFilter.SHOW_TEXT,
+            //         { acceptNode: node => /\S/.test(node.nodeValue) }
+            //     );
+
+            //     while (walker.nextNode()) {
+            //         const node = walker.currentNode;
+            //         const text = node.nodeValue.trim();
+            //         const translateUrl = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=${targetLanguage}&dt=t&q=${text}`;
+            //         try {
+            //             const response =fetch(translateUrl);
+            //             const data =response.json();
+            //             const translatedText = data[0][0][0];
+            //             node.textContent = node.textContent.replace(text, translatedText);
+            //         } catch (error) {
+            //             console.error(error);
+            //             // Handle translation error
+            //         }
+            //     }
+            // }
+        // };
+
+    </script>
+
+    <script>
         const API_KEY = `317a06010b8f49a4a08e3bb54667ec58`;
 
         document.addEventListener('DOMContentLoaded', function () {
-            loadNewsData("Tamil nadu Politics");
+            loadNewsData("Tamil Nadu politics").catch(error => {
+                console.error(error);
+                // Handle the error case
+            });
         });
 
         let date = new Date().getDate();
@@ -368,30 +447,6 @@
 
                 newsDiv.appendChild(div);
             });
-
-            // if (localStorage.getItem('language') === 'tamil') {
-            //     const targetLanguage = 'ta';
-            //     const walker = document.createTreeWalker(
-            //         newsDiv,
-            //         NodeFilter.SHOW_TEXT,
-            //         { acceptNode: node => /\S/.test(node.nodeValue) }
-            //     );
-
-            //     while (walker.nextNode()) {
-            //         const node = walker.currentNode;
-            //         const text = node.nodeValue.trim();
-            //         const translateUrl = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=${targetLanguage}&dt=t&q=${text}`;
-            //         try {
-            //             const response =fetch(translateUrl);
-            //             const data =response.json();
-            //             const translatedText = data[0][0][0];
-            //             node.textContent = node.textContent.replace(text, translatedText);
-            //         } catch (error) {
-            //             console.error(error);
-            //             // Handle translation error
-            //         }
-            //     }
-            // }
         };
 
     </script>
