--- a/pages/past leaders/past leaders.html
+++ b/pages/past leaders/past leaders.html
@@ -71,7 +71,7 @@
                 <th scope="col">கட்சி பெயர்</th>
 
             </tr>
-            <tr id="head_english" style="display: none;">
+            <!-- <tr id="head_english" style="display: none;">
 
                 <th scope="col">No</th>
                 <th scope="col">
@@ -84,7 +84,7 @@
 
                 <th scope="col">Party Name</th>
 
-            </tr>
+            </tr> -->
 
             <tbody class="table_body">
 
