--- a/admin/pages/leader_portfoie/create_leaders/politicin_create.html
+++ b/admin/pages/leader_portfoie/create_leaders/politicin_create.html
@@ -314,7 +314,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="../../assets/js/leader_profile_create.js"></script>
+    <script src="../../../assets/js/leader_profile_create.js"></script>
     <script src="../../../admin_main.js"></script>
 </body>
 
