fix: fix bug raised in github

--- a/pages/like_list.html
+++ b/pages/like_list.html
@@ -92,7 +92,7 @@
   <div class="card-container">
 
   </div>
-  <script src="../../assets/javascript/like_list.js"></script>
+  <script src="../assets/javascript/like_list.js"></script>
 
   <!-- script for bootstrap -->
 
