--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="assets/css/footer.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .news {
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
-
             gap: 30px;
             overflow-x: scroll;
 
@@ -47,6 +50,7 @@
             border-radius: 5px;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
             border-radius: 7px;
+            margin-bottom: 40px;
 
         }
 
@@ -87,7 +91,27 @@
             font-weight: bold;
         }
 
-        */
+        #chartCanvas,
+        #myChart {
+
+            width: 500px;
+            height: 500px;
+            margin: 0 auto;
+            padding-top: 40px;
+        }
+
+        .piecharts {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 50px;
+        }
+        .piecharts p{
+            font-size: 20px;
+            font-weight: 500px;
+            color: brown;
+        }
     </style>
 
 </head>
@@ -161,9 +185,19 @@
 
     </div>
 
-    <div class="image_container">
+
+    <div class="piecharts">
+        <div>
+            <p>தமிழ்நாடு மொத்த வாக்குகள்.</p>
+            <canvas id="chartCanvas"></canvas>
+        </div>
+        <div>
+            <P>அரசியல் லஞ்ச சர்வே முடிவுகள்</P>
+            <canvas id="myChart"></canvas>
+        </div>
 
     </div>
+
 
     <!-- section3 -->
 
@@ -228,6 +262,9 @@
 
     </div>
 
+
+
+
     <!-- section5 -->
 
     <div class="section5">
@@ -240,6 +277,83 @@
 
         </div>
     </div>
+
+
+
+    <script>
+        const votersData = [
+            { label: "Women", value: 31828727 },
+            { label: "Men", value: 30838473 },
+            { label: "Third Gender", value: 7246 }
+        ];
+
+        // Create pie chart
+        const ctx = document.getElementById("chartCanvas").getContext("2d");
+
+        new Chart(ctx, {
+            type: "pie",
+            data: {
+                labels: votersData.map(data => data.label),
+                datasets: [{
+                    data: votersData.map(data => data.value),
+                    backgroundColor: ["#FF6384", "#36A2EB", "#FFCE56"],
+                    hoverBackgroundColor: ["#FF6384", "#36A2EB", "#FFCE56"]
+                }]
+            },
+            options: {
+                plugins: {
+                    legend: {
+                        position: "left", // Adjust the position to your preference (e.g., "left", "top", "bottom")
+                        align: "start", // Align the legend text to the start of the line
+                    },
+                },
+            },
+        });
+
+
+        const bribeData = [
+            { label: "Paid Several Times", percentage: 35 },
+            { label: "Paid Once or Twice", percentage: 27 },
+            { label: "Did Not Pay", percentage: 8 },
+            { label: "No Need to Pay", percentage: 30 }
+        ];
+
+        // Extract labels and percentages
+        const labels = bribeData.map(data => data.label);
+        const percentages = bribeData.map(data => data.percentage);
+
+        // Create line chart
+        const ctx1 = document.getElementById("myChart").getContext("2d");
+        new Chart(ctx1, {
+            type: "line",
+            data: {
+                labels: labels,
+                datasets: [{
+                    label: "Bribe Survey Results",
+                    data: percentages,
+                    backgroundColor: "rgba(54, 162, 235, 0.2)",
+                    borderColor: "rgba(54, 162, 235, 1)",
+                    borderWidth: 2,
+                    pointBackgroundColor: "rgba(54, 162, 235, 1)",
+                    pointRadius: 4,
+                    pointHoverRadius: 6,
+                    fill: "start"
+                }]
+            },
+            options: {
+                responsive: true,
+                scales: {
+                    y: {
+                        beginAtZero: true,
+                        max: 100,
+                        ticks: {
+                            stepSize: 10
+                        }
+                    }
+                }
+            }
+        });
+    </script>
 
     <script>
 
@@ -320,83 +434,6 @@
     </script>
 
 
-    <script>
-    //     const API_KEY = `317a06010b8f49a4a08e3bb54667ec58`;
-
-    //     document.addEventListener('DOMContentLoaded', function () {
-    //         loadNewsData("Tamil nadu Politics");
-    //     });
-
-    //     let date = new Date().getDate();
-    //     let month = new Date().getMonth();
-    //     let yr = new Date().getFullYear();
-
-    //     const loadNewsData = async searchText => {
-    //         const url = `https://newsapi.org/v2/everything?q=${searchText}&from=${yr}-0${month}-${date}&sortBy=publishedAt&apiKey=${API_KEY}`;
-    //         try {
-    //             const res = await fetch(url);
-    //             const data = await res.json();
-    //             console.log(data.articles);
-    //             displayNewsData(data.articles);
-    //         } catch (error) {
-    //             console.error(error);
-    //             // Handle the error case
-    //         }
-    //     };
-
-    //     const displayNewsData = articles => {
-    //         const newsDiv = document.querySelector('.news');
-    //         newsDiv.innerHTML = '';
-
-    //         articles.forEach(article => {
-    //             const { author, description, publishedAt, title, url, urlToImage } = article;
-
-    //             const split = publishedAt.split('T');
-    //             const time = split[1];
-    //             const onlyTime = time.split('Z');
-
-    //             const div = document.createElement('div');
-    //             div.classList.add('h_100_1');
-    //             div.innerHTML = `
-    //   <img src="${urlToImage ? urlToImage : 'No image found'}" class="card-img-top" alt="">
-    //   <div class="card-body">
-    //     <span><p><b>Date: </b> ${split[0]} at ${onlyTime[0]}</p></span>
-    //     <h5 class="card-title">${title}</h5>
-    //     <p class="card-text">${description}</p>
-    //   </div>
-    // `;
-
-    //             newsDiv.appendChild(div);
-    //         });
-
-            // if (localStorage.getItem('language') === 'tamil') {
-            //     const targetLanguage = 'ta';
-            //     const walker = document.createTreeWalker(
-            //         newsDiv,
-            //         NodeFilter.SHOW_TEXT,
-            //         { acceptNode: node => /\S/.test(node.nodeValue) }
-            //     );
-
-            //     while (walker.nextNode()) {
-            //         const node = walker.currentNode;
-            //         const text = node.nodeValue.trim();
-            //         const translateUrl = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=${targetLanguage}&dt=t&q=${text}`;
-            //         try {
-            //             const response =fetch(translateUrl);
-            //             const data =response.json();
-            //             const translatedText = data[0][0][0];
-            //             node.textContent = node.textContent.replace(text, translatedText);
-            //         } catch (error) {
-            //             console.error(error);
-            //             // Handle translation error
-            //         }
-            //     }
-            // }
-        // };
-
-    </script>
-
-   
     <!-- footer  section-->
 
     </div>
