--- a/pages/more/governer_profile.html
+++ b/pages/more/governer_profile.html
@@ -56,13 +56,14 @@
 
 
         </div>
-        
+
         <h1 class="cmd">கருத்துப் பகுதி</h1>
         <ul id="comments-list">கருத்து</ul>
         <form id="comment-form">
             <label for="comment"></label>
             <textarea id="comment" required></textarea>
             <br>
+            <p id="information">Login and then try comment Thank you</p>
             <input type="submit" id="submit_btn" value="Submit">
         </form>
 
@@ -74,17 +75,7 @@
     <script src="../../main.js"></script>
 
     <script>
-        var hi = new Vivus('Layer_1', {
-            type: 'oneByOne', // Set the animation type to 'oneByOne'
-            duration: 500, // Adjust the duration to control the speed of rotation
-            start: 'autostart',
-            dashGap: 0, // Set the dash gap to 0 for a continuous rotation
-            forceRender: false
-        }, function () {
-            if (window.console) {
-                console.log('Animation finished. [log triggered from callback]');
-            }
-        });
+     
 
 
         function handleFormSubmit(event) {
@@ -92,21 +83,28 @@
 
             const users = JSON.parse(localStorage.getItem("users"));
 
-            const minister = JSON.parse(localStorage.getItem("mla_ditails"));
+            const minister = JSON.parse(localStorage.getItem("governor_details"));
 
             const loginEmail = localStorage.getItem("profile_email");
+
             const currentUser = users.find(user => user.email === loginEmail);
+
             const currentUserName = currentUser.first_name;
 
-            const ministerName = document.getElementById("minister-name").innerText
-                .replace("NAME : ", "")
-                .trim();
+            const url = window.location.search;
 
-            const ministerId = minister.find(m => m.governor_name === ministerName).id;
+            const urlParams = new URLSearchParams(url);
+
+            const username = urlParams.get("name");
+
+            const ministerId = minister.find(m => m.id === username).id;
 
             const comment = document.getElementById("comment").value;
+
             const timestamp = new Date().getTime();
+
             const commentObject = {
+
                 user_id: currentUserName,
                 comment,
                 timestamp,
@@ -118,7 +116,7 @@
             localStorage.setItem("comments", JSON.stringify(comments));
 
             const filteredComments = comments.filter(
-                comment_id => comment_id.ministerId === ministerId
+                comment_id => comment_id.id === username
             );
             displayComments(filteredComments)
 
@@ -131,18 +129,19 @@
 
             const minister = JSON.parse(localStorage.getItem("governor_details"))
 
-            const ministerName = document.getElementById("minister-name").innerText
-                .replace("NAME : ", "")
-                .trim();
-            const ministerId = minister.find(m => m.governor_name === ministerName).id;
-            console.log(ministerId);
+            const url = window.location.search;
+
+            const urlParams = new URLSearchParams(url);
+
+            const username = urlParams.get("name");
+
             const commentsList = document.getElementById("comments-list");
 
             commentsList.innerHTML = "";
 
-            comments1.array.forEach(comment => {
+            comments1.forEach(comment => {
 
-                if (comment.ministerId === ministerId) {
+                if (comment.ministerId === username) {
 
                     const li = document.createElement("li");
                     const date = new Date(comment.timestamp).toLocaleString();
@@ -157,14 +156,22 @@
 
         window.onload = displayComments;
 
+
         const submit_btn = document.getElementById("submit_btn");
 
         const loginEmail = localStorage.getItem("profile_email");
 
+        const information = document.getElementById("information");
+
+
         if (loginEmail !== null) {
             submit_btn.style.display = "block"
+
+            information.style.display = "none"
         } else {
             submit_btn.style.display = "none"
+
+            information.style.display = "block"
         }
 
     </script>
