--- a/pages/more/mla_profile.html
+++ b/pages/more/mla_profile.html
@@ -366,11 +366,10 @@
         <h1 class="cmd">Comment Section</h1>
         <ul id="comments-list"></ul>
         <form id="comment-form">
-            <!-- <label for="name">Name:</label>
-            <input type="text" id="name" name="name"><br> -->
             <label for="comment">Comment:</label>
             <textarea id="comment" required name="comment"></textarea>
-<br>
+            <br>
+            <p id="information">Login and then try comment Thank you</p>
             <input type="submit" id="submit_btn" value="Submit">
         </form>
 
@@ -378,26 +377,30 @@
 
 
     <script src="../../assets/javascript/mla_profile.js"></script>
-    
+
     <script src="../../main.js"></script>
 
 
-    <script>        function handleFormSubmit(event) {
+    <script>       
+    
+    function handleFormSubmit(event) {
             event.preventDefault();
 
             const users = JSON.parse(localStorage.getItem("users"));
 
-            const minister = JSON.parse(localStorage.getItem("mla_ditails"));
+            const minister = JSON.parse(localStorage.getItem("mla_details_tamil"));
 
             const loginEmail = localStorage.getItem("profile_email");
             const currentUser = users.find(user => user.email === loginEmail);
             const currentUserName = currentUser.first_name;
 
-            const ministerName = document.getElementById("minister-name").innerText
-                .replace("NAME : ", "")
-                .trim();
+            const url = window.location.search;
 
-            const ministerId = minister.find(m => m.candidate_Name=== ministerName).mla_id;
+            const urlParams = new URLSearchParams(url);
+
+            const username = urlParams.get("name");
+
+            const ministerId = minister.find(m => m.mla_id === username).mla_id;
 
             const comment = document.getElementById("comment").value;
             const timestamp = new Date().getTime();
@@ -409,7 +412,9 @@
             };
 
             const comments = JSON.parse(localStorage.getItem("comments")) ?? [];
+
             comments.push(commentObject);
+
             localStorage.setItem("comments", JSON.stringify(comments));
 
             const filteredComments = comments.filter(
@@ -424,13 +429,16 @@
 
             const comments1 = JSON.parse(localStorage.getItem("comments")) ?? [];
 
-            const minister = JSON.parse(localStorage.getItem("mla_ditails"))
+            const minister = JSON.parse(localStorage.getItem("mla_details_tamil"))
 
-            const ministerName = document.getElementById("minister-name").innerText
-                .replace("NAME : ", "")
-                .trim();
-            const ministerId = minister.find(m => m.candidate_Name=== ministerName).mla_id;
-                 console.log(ministerId);
+            const url = window.location.search;
+
+            const urlParams = new URLSearchParams(url);
+
+            const username = urlParams.get("name");
+
+            const ministerId = minister.find(m => m.mla_id === username).mla_id;
+
             const commentsList = document.getElementById("comments-list");
 
             commentsList.innerHTML = "";
@@ -456,10 +464,17 @@
 
         const loginEmail = localStorage.getItem("profile_email");
 
+        const information = document.getElementById("information");
+
+
         if (loginEmail !== null) {
             submit_btn.style.display = "block"
+
+            information.style.display = "none"
         } else {
             submit_btn.style.display = "none"
+
+            information.style.display = "block"
         }
     </script>
 
